fixed chart overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,9 +72,12 @@ code {
   /* display: flex; */
   /* justify-content: center;
   align-items: center; */
-  /* position: relative;
-  min-width: 300px; */
+  position: relative;
+  /* min-width: 300px;  */
   /* transform: translate(10%); */
+  /* height: 100%; */
+  /* width: 100%; */
+  
 }
 
 .fade-in {
@@ -98,6 +101,7 @@ code {
   /* transform: translate(-30%, 20%); */
   width: 100%;
   /* min-width: 300px; */
+  overflow: hidden;
 }
 
 #top-circle {
@@ -107,6 +111,7 @@ code {
   /* transform: translate(-50%, 20%); */
   /* min-width: 300px; */
   width: 100%;
+  overflow: hidden;
 }
 
 .spin {
@@ -114,6 +119,7 @@ code {
 }
 .spin-unauth {
   animation: rotation1 2s infinite linear;
+  overflow: hidden;
 }
 @keyframes rotation1 {
   from {
